# kindle-highlights

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  SUMMARY.md  pyproject.toml
docs/imps/: IMP-001-ty-ruff.md  IMP-002-service-api.md  README.md
kindle_highlights/: __main__.py  parser.py  scraper.py
src/: app.py  main.py  parser.py  scraper.py
tests/: test_api.py  test_parser.py
tests/fixtures/: sample_notebook.html
