[project]
name = "kindle-highlights"
version = "0.1.0"
description = "Scrape Kindle highlights from Amazon's notebook page"
authors = [{ name = "Shane Neeley" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
keywords = ["kindle", "highlights", "scraper", "amazon", "ebook"]
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "pyotp>=2.9.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
kindle-highlights = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]

[tool.hatch.build.targets.wheel.sources]
src = "src"

[tool.hatch.build.targets.wheel.force-include]
"src/app.py" = "app.py"
"src/main.py" = "main.py"
"src/parser.py" = "parser.py"
"src/scraper.py" = "scraper.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[dependency-groups]
dev = ["pytest>=8.4.2", "pytest-asyncio>=1.2.0", "ruff>=0.1.0", "httpx>=0.27.0"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "ASYNC", # async best practices
]
ignore = [
    "E501", # line too long (handled by formatter)
]
